Correção de curso

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Front-end</li>
+        <li>Front-end & Back-end</li>
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
