--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Front-end & Back-end</li>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: Sua infraestrutura com código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
